--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -192,7 +192,7 @@
 								}
 
 								<div style="margin-bottom: 20px; @marginIzq">
-									<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor">
+									<a href="/game/@juego.JuegoId/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor">
 										<div style="display: flex; align-items: center; padding: 2px;">
 											<div style="text-align: center; width: 17%;">
 												<img src="@juego.Imagen" style="width: 100%; height: 100%;" />
