--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -212,6 +212,24 @@
 			height: 24px;
 		}
 	}
+
+	.noticia-expandir {
+		transition: transform .2s;
+	}
+
+		.noticia-expandir:hover {
+			transform: scale(1.01);
+		}
+
+	.noticia-ancho {
+		width: calc(33% - 30px);
+	}
+
+	@@media (max-width: 800px) {
+		.noticia-ancho {
+			width: calc(50% - 30px);
+		}
+	}
 </style>
 
 @if (aviso != null)
@@ -335,153 +353,82 @@
 	</div>
 </div>
 
-@if (usuario != null)
-{
-	if (BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
-	{
-		@if (noticiasMostrar.Count > 0)
-		{
-			int i = 0;
-
-			<div style="display: flex; overflow: auto; padding-bottom: 20px; margin-left: 10px; margin-right: 10px; margin-bottom: 60px;">
-				@foreach (var noticia in noticiasMostrar)
-				{
-					i += 1;
-
-					string paddingDerecha = "padding-right: 20px;";
-
-					if (i == noticiasMostrar.Count)
-					{
-						paddingDerecha = string.Empty;
-					}
-
-					string objetivo = "_self";
-
-					if (string.IsNullOrEmpty(noticia.Enlace) == false)
-					{
-						if (noticia.Enlace.Contains("/link/") == true)
-						{
-							objetivo = "_blank";
-						}
-					}
-
-					string enlace = noticia.Enlace;
-
-					if (string.IsNullOrEmpty(enlace) == true)
-					{
-						enlace = "/news/" + noticia.Id + "/";
-					}
-
-					<a style="float: left; width: 33%; flex: 0 0 auto; text-decoration: none; @paddingDerecha" href="@enlace" target="@objetivo">
-						<div style="color: var(--colorTexto); font-size: 14px;">
-							<div style="display: flex; align-items: center;">
-								<div style="background-color: var(--fondoOscuro); padding: 8px 12px 5px 12px; margin-left: auto;">
-									@noticia.Tipo
-								</div>
-							</div>
-							
-							<div style="background-color: var(--fondoOscuro); padding: 3px;">
-								<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: contain;" alt="@noticia.TituloEn" />
-							</div>
-
-							<div style="background-color: var(--fondoOscuro); padding: 5px 12px 10px 12px; display: flex; align-items: center;">
-								@if (string.IsNullOrEmpty(CargarIconoNoticia(noticia)) == false)
-								{
-									<div>
-										<img src="@CargarIconoNoticia(noticia)" style="width: 18px; height: 18px; margin-right: 20px;" alt="Store" />
-									</div>
-								}
-
-								<div style="margin-left: auto;">
-									@Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)
-								</div>
-							</div>
-						</div>						
-					</a>
-				}
-			</div>
-		}		
-	}
-}
-
 @if (noticiasMostrar.Count > 0)
 {
-	<div style="display: flex; font-size: 20px; align-items: center; justify-content: center;">
-		<a href="/last-news" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNews")</a>
+	<div style="display: flex; overflow: auto; padding-bottom: 20px; margin-left: 5px; margin-right: 5px; margin-bottom: 60px; gap: 30px; display: flex; overflow: auto; padding-bottom: 20px; margin-left: 5px; margin-right: 5px; margin-bottom: 60px; gap: 30px; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
+		@foreach (var noticia in noticiasMostrar)
+		{
+			string objetivo = "_self";
 
-		<a href="@Herramientas.Idiomas.CogerRSS(idioma)" target="_blank" style="margin-left: 20px;"><i class="fa-solid fa-rss"></i></a>		
-	</div>
-
-	<div style="margin-bottom: 25px;">
-		@{
-			int i = 0;
-
-			foreach (var noticia in noticiasMostrar)
+			if (string.IsNullOrEmpty(noticia.Enlace) == false)
 			{
-				i += 1;
-
-				string marginArriba = "margin-top: 30px;";
-
-				if (i == 1)
+				if (noticia.Enlace.Contains("/link/") == true)
 				{
-					marginArriba = "margin-top: 20px;";
+					objetivo = "_blank";
 				}
-
-				<div style="padding-left: 30px; padding-right: 30px; @marginArriba">
-					@{
-						string objetivo = "_self";
-
-						if (string.IsNullOrEmpty(noticia.Enlace) == false)
-						{
-							if (noticia.Enlace.Contains("/link/") == true)
-							{
-								objetivo = "_blank";
-							}
-						}
-
-						string enlace = noticia.Enlace;
-
-						if (string.IsNullOrEmpty(enlace) == true)
-						{
-							enlace = "/news/" + noticia.Id + "/";
-						}
-
-						<a class="boton-pequeño" style="padding: 2px;" href="@enlace" target="@objetivo">
-							<div class="perfil-flexible-centrado">
-								<div style="width: 30%;">
-									<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: contain;" alt="@noticia.TituloEn" />
-								</div>
-
-								<div style="width: 70%; padding: 20px 30px;">
-									<div style="margin-bottom: 20px; display: flex; align-items: center;">
-										<div class="noticia-fecha" style="margin-right: 20px;">
-											@noticia.FechaEmpieza.Day.ToString()/@noticia.FechaEmpieza.Month.ToString()/@noticia.FechaEmpieza.Year.ToString()
-										</div>
-
-										@if (string.IsNullOrEmpty(CargarIconoNoticia(noticia)) == false)
-										{
-											<img src="@CargarIconoNoticia(noticia)" style="width: 16px; height: 16px; margin-right: 20px;" alt="Store" />
-										}
-
-										<label class="noticia-categoria">@NoticiasCargar.Traduccion(noticia.Tipo, idioma)</label>
-									</div>
-
-									<div class="noticia-fuente">
-										@Herramientas.Idiomas.MirarTexto(idioma, @noticia.TituloEn, @noticia.TituloEs)
-									</div>
-								</div>
-							</div>
-						</a>
-					}
-				</div>
 			}
-		}
-	</div>
 
-	<div style="margin-bottom: 60px; margin-left: auto; margin-right: auto; width: 400px;">
-		<a class="boton-pequeño" style="width: 100%; padding: 15px 20px; font-size: 17px; text-align: center;" href="/last-news">
-			@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNewsMore")
-		</a>
+			string enlace = noticia.Enlace;
+
+			if (string.IsNullOrEmpty(enlace) == true)
+			{
+				enlace = "/news/" + noticia.Id + "/";
+			}
+
+			<div class="tooltip-juego noticia-ancho" style="float: left; flex: 0 0 auto;" onmousemove="hoverTooltip(event, 'tooltip-@noticia.Id.ToString()')">
+				<div id="tooltip-@noticia.Id.ToString()" class="tooltip-relleno" style="padding: 15px; max-width: 400px;">
+					@Herramientas.Idiomas.MirarTexto(idioma, @noticia.TituloEn, @noticia.TituloEs)
+				</div>
+
+				<a style="text-decoration: none;" href="@enlace" target="@objetivo">
+					<div class="noticia-expandir" style="color: var(--colorTexto); font-size: 14px; height: 100%; margin: 0 auto;">
+						<div style="display: flex; align-items: center; height: 10%;">
+							<div style="background-color: var(--fondoOscuro); padding: 8px 12px 5px 12px; margin-left: auto;">
+								@if (noticia.Tipo == NoticiaTipo.Bundles)
+								{
+									@Herramientas.Idiomas.CogerCadena(idioma, "Index.News1")
+								}
+								else if (noticia.Tipo == NoticiaTipo.Gratis)
+								{
+									@Herramientas.Idiomas.CogerCadena(idioma, "Index.News2")
+								}
+								else if (noticia.Tipo == NoticiaTipo.Suscripciones)
+								{
+									@Herramientas.Idiomas.CogerCadena(idioma, "Index.News3")
+								}
+								else
+								{
+									@noticia.Tipo
+								}
+							</div>
+						</div>
+
+						<div style="background-color: var(--fondoOscuro); padding: 3px; height: 80%;">
+							<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: cover;" alt="@noticia.TituloEn" />
+						</div>
+
+						<div style="background-color: var(--fondoOscuro); padding: 5px 12px 10px 12px; height: 10%; display: flex; align-items: center;">
+							@if (string.IsNullOrEmpty(CargarIconoNoticia(noticia)) == false)
+							{
+								<div>
+									<img src="@CargarIconoNoticia(noticia)" style="width: 18px; height: 18px; margin-right: 20px;" alt="Store" />
+								</div>
+							}
+
+							<div style="margin-left: auto;">
+								@Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)
+							</div>
+						</div>
+					</div>
+				</a>
+			</div>
+		}
+
+		<div style="margin: auto;">
+			<a class="boton-pequeño" style="padding: 15px 20px; font-size: 17px; text-align: center; min-width: 300px;" href="/last-news">
+				@Herramientas.Idiomas.CogerCadena(idioma, "Index.LastNewsMore")
+			</a>
+		</div>
 	</div>
 }
 else
