--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -292,13 +292,13 @@
 					}
 
 					<div style="position: absolute; left: 0; bottom: 0; width: 100%; background-image: linear-gradient(to bottom, rgba(255,0,0,0), @colorSeleccionado);
-								display: flex; align-items: center;" class="destacado-hueco">
+								display: flex; align-items: end;" class="destacado-hueco">
 
-						<div class="destacado-logo-alto" style="width: 100%; display: flex; align-items: center;">
+						<div class="destacado-logo-alto" style="width: 100%; height: 100%; display: flex; align-items: center;">
 							<img src="@juegoSeleccionado.Imagenes.Logo" class="destacado-logo-ancho" alt="@juegoSeleccionado.Nombre">
 						</div>
 
-						<div style="display: flex; align-items: center; margin-top: 40px; color: var(--colorTexto);">
+						<div style="display: flex; align-items: center; margin-bottom: 30px; color: var(--colorTexto);">
 							<img class="destacado-icono" src="@CargarDRM(juegoSeleccionado)" style="margin-right: 20px;" alt="DRM" />
 							<img class="destacado-icono" src="@CargarIconoTienda(juegoSeleccionado)" style="margin-right: 40px;" alt="Store" />
 
