--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -73,7 +73,7 @@
                     }
 
                     <div style="padding: 15px; text-align: center;">
-                        <div style="text-align: center;">
+                        <div style="text-align: center; max-width: 430px;">
                             @tooltipDatos.Nombre
                         </div>
 
@@ -100,7 +100,7 @@
                             <img src="@juego.Imagen" style="width: 100%; height: 100%;" alt="@juego.Nombre"/>
                         </div>
 
-                        <div style="padding-left: 20px; padding-right: 20px; text-align: left;">
+                        <div style="padding-left: 20px; padding-right: 20px; text-align: left; width: 60%;">
                             <div style="margin-bottom: 10px; font-size: 17px;">
                                 @juego.Nombre
                             </div>
