--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -30,14 +30,51 @@
 			adminLogeado = true;
 		}
 	}
+
+	string enlace = "https://pepeizqdeals.com/" + Model.juego.Id.ToString() + "/" + Herramientas.EnlaceAdaptador.Nombre(Model.juego.Nombre) + "/";
+
+	string descripcion = string.Empty;
+
+	if (Model.juego.Caracteristicas != null)
+	{
+		if (string.IsNullOrEmpty(Model.juego.Caracteristicas.Descripcion) == false)
+		{
+			descripcion = Model.juego.Caracteristicas.Descripcion;
+		}
+	}
+
+	string imagen = string.Empty;
+
+	if (Model.juego.Imagenes != null)
+	{
+		if (string.IsNullOrEmpty(Model.juego.Imagenes.Header_460x215) == false)
+		{
+			imagen = Model.juego.Imagenes.Header_460x215;
+		}
+	}
 }
+
+@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new { 
+	idioma = Model.idioma, 
+	titulo = Model.juego.Nombre, 
+	enlace = enlace, 
+	canonical = enlace, 
+	descripcion = descripcion, 
+	imagen = imagen 
+}))
 
 @if (usuarioLogeado == true)
 {
 	@if (adminLogeado == true)
 	{
-		@(await Html.RenderComponentAsync<Componentes.Admin.Juego>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, juego = Model.juego }))
+		@(await Html.RenderComponentAsync<Componentes.Admin.Juego>(RenderMode.Server, new { 
+			idioma = Model.idioma, 
+			juego = Model.juego 
+		}))
 	}
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, juego = Model.juego }))
+@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.Server, new { 
+	idioma = Model.idioma, 
+	juego = Model.juego 
+}))
